tests/compile_fail/mpst_error_2.stderr
error[E0277]: the trait bound `Logger: Project<GSend<String, Client, Server, GEnd>>` is not satisfied
 --> $DIR/mpst_error_2.rs:39:29
  |
39 |     let _local_protocol = <GlobalProtocol as Project<Logger>>::LocalProtocol;
  |                             ^^^^^^^^^^^^^ the trait `Project<GSend<String, Client, Server, GEnd>>` is not implemented for `Logger`
  |
  = help: the following other types implement trait `Project<R>`:
            <GSend<T, From, To, Next> as Project<From>>
            <GSend<T, From, To, Next> as Project<To>>
  = note: required for `GSend<String, Client, Server, GEnd>` to implement `Project<Logger>`